Update: Added classes on list titles and fixed code vertical alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,6 @@ pre {
   margin: 0;
   border-radius: 5px;
   background-color: #1e1e1e;
-  color: #7bff23a6;
   max-width: 100%;
   box-sizing: border-box;
 }
@@ -51,6 +50,8 @@ code {
   display: inline-block;      
   border-radius: 3px;
   font-size: 0.95em;
+  vertical-align: middle;
+  color: #7bff23a6;
 }
 
 .code-wrapper {
@@ -134,6 +135,11 @@ th, td {
   margin-top: -5px;
 }
 
+.list-title {
+  margin-top: 0px;
+  margin-bottom: 50px;
+}
+
 .tag-list {
   font-size: 20px;
 }
@@ -162,7 +168,8 @@ ul.sidebar-link li {
 }
 
 .summary-title {
-  color:rgba(0, 194, 48, 0.795)
+  color:rgba(30, 255, 0, 0.767);
+  font-size: 23px;
 }
 
 .summary-date {
@@ -173,8 +180,8 @@ ul.sidebar-link li {
 }
 
 .summary-content {
-  color: rgba(241, 255, 230, 0.753);
-  font-size: 15px;
+  color: rgba(255, 255, 255, 0.692);
+  font-size: 16px;
 }
 
 .read-more {
@@ -211,7 +218,7 @@ ul.sidebar-link li {
 }
 
 .post-content {
-  color: rgba(241, 255, 230, 0.753);
+  color: rgba(255, 255, 255, 0.692);
   font-size: 17px;
   max-width: 100%;
 }
@@ -221,17 +228,23 @@ ul.sidebar-link li {
   height: auto;
 }
 
+.post-content h1, h2, h3 {
+  color:rgb(237, 255, 224);
+}
+
 .post-content a {
   word-break: break-all;
 }
 
 .about-title {
+  margin-top: 0px;
+  margin-bottom: 50px;
   color: #7bff23a6;
   font-size: 25px;
 }
 
 .about-content {
-  color: rgba(241, 255, 230, 0.753);
+  color: rgba(255, 255, 255, 0.692);
   font-size: 18px;
 }
 
